Fix z-index for modals

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -3,4 +3,6 @@
   "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 @primary-color: #3366cc;
 @zindex-dropdown: 1075;
+@zindex-modal: 1076;
+@zindex-modal-mask: @zindex-modal;
 @tooltip-bg: @primary-color;
